[package]
authors = ["Loïc Damien <loic.damien@dzamlo.ch>"]
name = "reyzell-netlink-packet-netfilter"
version = "0.2.0"
edition = "2018"

homepage = "https://github.com/reyzell/netlink-packet-netfilter"
keywords = ["netlink", "linux", "netfilter"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/reyzell/netlink-packet-netfilter"
description = "netlink packet types for the netfilter subprotocol"

[dependencies]
netlink-packet-core = { version = "0.8.1" }
bitflags = "2.3"
libc = "0.2.77"
derive_more = "0.99.16"

[dev-dependencies]
netlink-sys = { version = "0.8.3" }
